[package]
name = "hammer-units-conversion-tool"
version = "1.1.0"
authors = ["degradka <degradka@gmail.com>"]
edition = "2021"
description = "The Hammer Units Conversion Tool (HUCT) is a compact and user-friendly tool designed for seamlessly converting real-world measurements to Hammer units and vice versa."
repository = "https://github.com/degradka/hammer-units-conversion-tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
image = "0.24.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"